<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Gift-O-Matic</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="signup_text">Sign up with</string>
    <string name="or">OR</string>
    <string name="facebook_btn">Facebook</string>
    <string name="title_activity_register_email">RegisterEmail</string>
    <string name="email">E-mail</string>
    <string name="password_hint">Password</string>
    <string name="username_hint">Username</string>
    <string name="password_repeat_hint">Repeat password</string>
    <string name="submit">Submit</string>
    <string name="title_activity_reg_success">RegSuccessActivity</string>

</resources>
