<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="20dp"
    android:gravity="right"
    tools:context="com.jxcube.gift_o_matic.RegisterEmail" >

    <EditText
        android:id="@+id/email_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingBottom="15dp"
        android:textSize="15sp"
        android:typeface="normal" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/username_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:hint="@string/username_hint"
        android:paddingBottom="15dp"
        android:textSize="15sp" />
    
    <EditText
        android:id="@+id/password_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:paddingBottom="15dp"
        android:textSize="15sp" />
    
    <EditText
        android:id="@+id/password_repeat_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:hint="@string/password_repeat_hint"
        android:inputType="textPassword"
        android:paddingBottom="15dp"
        android:textSize="15sp" />
    
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="40dp"
        android:text="@string/submit"
        android:textSize="15sp"
        android:onClick="registerWithEmail" />
    
</LinearLayout>
